--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,11 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
