--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  p, a, button {
+    font-size: 20px !important;
+  }
+}
+
 :root {
   --foreground: #171717;
 }
